--- a/ESP32SwarmManager/Resources/Info.plist
+++ b/ESP32SwarmManager/Resources/Info.plist
@@ -10,16 +10,10 @@
 	<string>ESP32 Swarm Manager accesses the local network for firmware downloads and camera streams.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>localhost</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-				<key>NSIncludesSubdomains</key>
-				<true/>
-			</dict>
-		</dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 </dict>
 </plist>
